--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
       </nav>
 </header>
     <main class="container">
-        <h1 class="animate__animated animate__flip frase1 text-center mt-5">
+        <h1 class="animate__animated animate__flip frase1 text-center mt-5 mb-5">
             Contacto
         </h1>
         <form>
