--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light  COLOR mb-5">
+    <nav class="navbar navbar-expand-lg navbar-light COLOR">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="./media/Logofinal.jpeg" class="logo mr" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
-          <div class="carousel-inner mb-5">
+          <div class="carousel-inner mrb">
             <div class="carousel-item active">
               <img src="https://p4.wallpaperbetter.com/wallpaper/632/743/774/oil-picture-landscape-canvas-wallpaper-preview.jpg"  class="d-block w-100 alto" alt="...">
             </div>
