--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="row">
         <div class="wapp col-6">
           <img src="https://www.svgrepo.com/show/106976/whatsapp.svg"  alt="">
