footer parcialmente cambiado en index

--- a/index.html
+++ b/index.html
@@ -92,22 +92,54 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="row">
-        <div class="wapp col-6">
-          <img src="https://www.svgrepo.com/show/106976/whatsapp.svg"  alt="">
-          <h3 class="m-3">
-            +54 2235825600
-          </h3>
-        </div>
-        <div class="insta col-6">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg"  alt="">
-          <h3 class="m-3">
-            Vivi.espacio
-          </h3>
-        </div>
+
+    <!-- ↓FOOTER↓ -->
+    
+    <footer>
+      <div class="father">
+
+        <!-- ↓ Columna 1 ↓ -->
+
+          <div class="contact">
+            <h1 class="title">
+              Contáctanos:
+            </h1>
+            <p class="subtitle">
+              vivianabarran@gmail.com
+            </p>
+            <p class="subtitle">
+              +54 223 5797714
+            </p>
+          </div>
+
+        <!-- ↓ Columna 2 ↓ -->
+
+          <div class="redes">
+            <h1 class="title">
+              Sígenos en nuestras redes sociales:
+            </h1>
+            <div class="rimg">
+              <img class="wimg" src="https://www.svgrepo.com/show/106976/whatsapp.svg" alt="Whatsapp">
+              <img class="iimg" src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg" alt="Instagram">
+              <img class="timg" src="https://cdn-icons-png.flaticon.com/512/25/25347.png" alt="">
+            </div>
+          </div>
+
+        <!-- ↓ Columna 3 ↓ -->
+
+            <div class="mailing">
+              <h1 class="title">
+                  Mailing list:
+              </h1>
+              <p class="subtitle">
+                ¡Regístrate si quieres recibir todas nuestras ofertas y novedades!
+              </p>
+            </div>
       </div>
     </footer>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
