--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
       </nav>
 </header>
     <main class="container">
-        <h1 class="animate__animated animate__flip frase1 text-center mt-5 mb-5">
+        <h1 class="animate__animated animate__pulse frase1 text-center mt-5 mb-5">
             Contacto
         </h1>
         <form>
@@ -63,24 +63,55 @@
                 <label for="exampleInputEmail1" class="form-label title2">Deje sus comentarios</label>
                 <input type="email" class="form-control mb-2 title2" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
-            <button type="submit" class="btn btn-dark mb-5 lbotones mt-3">Submit</button>
-            <button type="reset" class="btn btn-secondary mb-5 lbotones mt-3">Reset</button>
+            <button type="submit" class="btn btn-dark mb-5 lbotones mt-3">Enviar</button>
+            <button type="reset" class="btn btn-secondary mb-5 lbotones mt-3">Borrar</button>
         </form>
     </main>
+
+
     <footer>
-      <div class="row">
-        <div class="wapp col-6">
-          <img src="https://www.svgrepo.com/show/106976/whatsapp.svg"  alt="">
-          <h3 class="m-3">
-            +54 2235825600
-          </h3>
-        </div>
-        <div class="insta col-6">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg"  alt="">
-          <h3 class="m-3">
-            Vivi.espacio
-          </h3>
-        </div>
+      <div class="father">
+
+        <!-- ↓ Columna 1 ↓ -->
+
+          <div class="contact">
+            <h1 class="titlef">
+              Contáctanos:
+            </h1>
+            <p class="subtitlef">
+              vivianabarran@gmail.com
+            </p>
+            <p class="subtitlef">
+              +54 223 5797714
+            </p>
+          </div>
+
+        <!-- ↓ Columna 2 ↓ -->
+
+          <div class="redes">
+            <h1 class="titlef">
+              Sígenos en nuestras redes sociales:
+            </h1>
+            <div class="rimg">
+              <img class="fimg" src="https://svgsilh.com/svg/667456.svg" alt="Whatsapp">
+              <img class="iimg" src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg" alt="Instagram">
+              <img class="timg" src="https://cdn-icons-png.flaticon.com/512/25/25347.png" alt="">
+            </div>
+          </div>
+
+        <!-- ↓ Columna 3 ↓ -->
+
+            <div class="mailing">
+              <h1 class="titlef">
+                  Mailing list:
+              </h1>
+              <form>
+                <div class="mb-3">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text subtitlef">¡Regístrate si quieres recibir todas nuestras ofertas y novedades!</div>
+                </div>
+              </form>
+            </div>
       </div>
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
