Footer acutalizado en todas las vistas

--- a/esculturas.html
+++ b/esculturas.html
@@ -121,8 +121,9 @@
               </h1>
               <form>
                 <div class="mb-3">
+                  <div id="emailHelp" class="form-text subtitlef mb-2">¡Regístrate si quieres recibir todas nuestras ofertas y novedades!</div>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text subtitlef">¡Regístrate si quieres recibir todas nuestras ofertas y novedades!</div>
+                  <button type="submit" class="btn btn-dark mb-5 lbotones mt-3">Enviar</button>
                 </div>
               </form>
             </div>
