Footer acutalizado en todas las vistas

--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item mr">
-                <a class="nav-link lmenu1" href="bio.html">Trayectoria</a>
+                <a class="nav-link lmenu" href="bio.html">Trayectoria</a>
               </li>
               <li class="nav-item dropdown mr">
                 <a class="nav-link dropdown-toggle lmenu" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -114,6 +114,24 @@
               </form>
             </div>
       </div>
+      <!-- ↓ FOOTER PARA MOBILE ↓ -->
+      
+      <section class="footer">
+        <div class="row">
+          <div class="wapp col-6">
+            <img src="https://www.svgrepo.com/show/106976/whatsapp.svg"  alt="">
+            <h3 class="m-3">
+              +54 2235825600
+            </h3>
+          </div>
+          <div class="insta col-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg"  alt="">
+            <h3 class="m-3">
+              Vivi.espacio
+            </h3>
+          </div>
+        </div>
+      </section>
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
