--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item mr">
-                <a class="nav-link lmenu1" href="bio.html">Trayectoria</a>
+                <a class="nav-link lmenu" href="bio.html">Trayectoria</a>
               </li>
               <li class="nav-item dropdown mr">
                 <a class="nav-link dropdown-toggle lmenu" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -140,7 +140,27 @@
               </form>
             </div>
       </div>
+
+      <!-- ↓ FOOTER PARA MOBILE ↓ -->
+      
+      <section class="footer">
+        <div class="row">
+          <div class="wapp col-6">
+            <img src="https://www.svgrepo.com/show/106976/whatsapp.svg"  alt="">
+            <h3 class="m-3">
+              +54 2235825600
+            </h3>
+          </div>
+          <div class="insta col-6">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Black_Instagram_icon.svg"  alt="">
+            <h3 class="m-3">
+              Vivi.espacio
+            </h3>
+          </div>
+        </div>
+      </section>
     </footer>
+
 
 
 
