--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
       </nav>
 </header>
     <main class="container">
+      <div>
+        <h1 class="titulo">
+          Cuadros y esculturas a pedido
+        </h1>
+      </div>
       <section>
         <div id="carouselExampleIndicators" class="carousel slide w-100 m-auto" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -85,7 +90,7 @@
         </p>
         <div style="min-height: 120px;">
           <div class="collapse collapse-horizontal m-auto" id="collapseWidthExample">
-            <div class="card card-body m-auto estilo exp mb-4" style="width: 300px;">
+            <div class="card card-body m-auto estilo exp " style="width: 300px;">
               Todos los cuadros y esculturas son realizados a mano y a pedido. ¡Vos podes ser parte del proceso y personalizar tu próxima obra de arte!
             </div>
           </div>
